# AGORA

./: .env.example  .env.production.example  .gitignore  AGENT_ROUTING_IMPROVEMENTS.md  ARCHITECTURE.md  CHANGES.md  CHAT_HISTORY_PLAN.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  Caddyfile  DEBUGGING_TOOL_CALLS.md  DEMO_FIX_SUMMARY.md  DEMO_SCENARIOS.md  DUTCH_LANGUAGE_STRATEGY.md  FRONTEND_FIXES.md  GAP_ANALYSIS_SUMMARY.md  PERSONAS_AND_SCENARIOS.md  README.md  SETUP_GUIDE.md  TOOL_CALL_FIXES.md  UNIFIED_SYSTEM.md  VOICE_SETUP.md  docker-compose.production.yml  docker-compose.yml
.cursor/: 00-create-rules.mdc  01-python-rules.mdc  02-agora-architecture.mdc  03-openai-orchestration.mdc  04-mcp-servers.mdc  05-langgraph-orchestration.mdc  10-c4-schemas.mdc  30-ag-ui-protocol-hai.mdc  hai-react-app.mdc
HAI/: .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  README.md  USER_PROFILES.md  VOICE_MODE.md  docker-compose.yml  docker-entrypoint.sh  index.html  nginx.conf  nginx.gateway.conf  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
HAI/public/: env-config.js
HAI/src/: App.tsx  env.d.ts  main.tsx
HAI/tests/: setup.ts
api-gateway/: Dockerfile  pyproject.toml
api-gateway/src/api_gateway/: __init__.py  auth.py  config.py  main.py  proxy.py
c4/: ARCHITECTURE_UPDATE_NOTES.md  README.md  docker-compose.yml  package.json  workspace-openai.dsl  workspace-openai.json  workspace-opensource.json  workspace.dsl  workspace.json
docs/: API_GUIDE.md
docs/hai-contract/: .gitignore  AG_UI_PROTOCOL.md  Dockerfile  README.md  (+6 more)
mcp-servers/: .gitignore  README.md  docker-compose.yml  package.json  test_weaviate_connection.py
scripts/: test_api.py
server-langgraph/: .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml  sessions.db-shm  sessions.db-wal
server-langgraph/src/agora_langgraph/: __init__.py  config.py  logging_config.py
server-langgraph/src/agora_langgraph/adapters/: __init__.py  audit_logger.py  checkpointer.py  mcp_client.py  session_metadata.py  user_manager.py
server-langgraph/src/agora_langgraph/api/: __init__.py  ag_ui_handler.py  hai_protocol.py  server.py
server-langgraph/src/agora_langgraph/common/: __init__.py  ag_ui_types.py  hai_types.py  schemas.py
server-langgraph/src/agora_langgraph/core/: __init__.py  agent_definitions.py  agents.py  approval_logic.py  graph.py  parallel_streaming.py  state.py  tools.py
server-langgraph/src/agora_langgraph/pipelines/: __init__.py  moderator.py  orchestrator.py
server-langgraph/tests/: __init__.py  conftest.py  test_approval_logic.py
server-langgraph/tests/integration/: __init__.py  test_dual_channel_spoken.py
server-openai/: .env.example  ARCHITECTURE.md  DEVELOPMENT.md  Dockerfile  MANIFEST.in  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  sessions.db-shm  sessions.db-wal  test_realtime_connection.py
server-openai/common/: __init__.py  hai_types.py  protocols.py  schemas.py
server-openai/src/agora_openai/: __init__.py  config.py  logging_config.py
server-openai/src/agora_openai/adapters/: __init__.py  audit_logger.py  internal_tools.py  mcp_client.py  mcp_tools.py  openai_assistants.py  realtime_client.py  session_metadata.py  user_manager.py
server-openai/src/agora_openai/api/: __init__.py  ag_ui_handler.py  hai_protocol.py  server.py  unified_voice_handler.py  voice_handler.py
server-openai/src/agora_openai/common/: __init__.py  ag_ui_types.py  protocols.py  schemas.py
server-openai/src/agora_openai/core/: __init__.py  agent_definitions.py  agent_runner.py  approval_logic.py  routing_logic.py  tool_display_names.py
server-openai/src/agora_openai/pipelines/: __init__.py  moderator.py  orchestrator.py
server-openai/tests/: __init__.py  conftest.py  test_approval_logic.py  test_moderator.py  test_orchestrator.py  test_routing.py
server-openai/tests/integration/: __init__.py
(+211 files in other folders)
