[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agora-langgraph"
version = "1.0.0"
description = "LangGraph-based orchestration for AGORA multi-agent system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "aiosqlite>=0.19.0,<0.22.0",  # Pin due to langgraph-checkpoint-sqlite compatibility
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "python-dotenv>=1.0.0",
    "ag-ui-protocol>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.14",
    "black>=24.0.0",
    "isort>=5.13.0",
]

[project.scripts]
agora-langgraph = "agora_langgraph.api.server:main"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
force_sort_within_sections = true
src_paths = ["src"]
skip_gitignore = true

[tool.hatch.build.targets.wheel]
packages = ["src/agora_langgraph"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

